--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fluentui/svg-icons": "^1.1.185"
+	}
 }
